--- a/SuitmediaApp/view/bottomsheet/BottomSheet.storyboard
+++ b/SuitmediaApp/view/bottomsheet/BottomSheet.storyboard
@@ -37,6 +37,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Select">
                                     <fontDescription key="titleFontDescription" type="system" pointSize="18"/>
+                                    <color key="baseBackgroundColor" red="0.16862745098039217" green="0.38823529411764707" blue="0.4823529411764706" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </buttonConfiguration>
                                 <connections>
                                     <action selector="buttonSelectPressed:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="15x-H1-eSx"/>
